--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,96 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blue-background{
+  background-color: #1c5380;
+  height: 300px;
+}
+
+ul{
+  text-align: center;
+}
+
+li{
+  list-style: none;
+  display: inline;
+  margin: 10px;
+  text-transform: uppercase;
+  color: #1c5380;
+  font-size: 10px;
+  font-weight: bold;
+}
+
+.text-grey{
+  color: #868686;
+}
+
+.capture-moments{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  width: 500px;
+}
+
+.logo-header{
+  width: 500px;
+}
+
+h1{
+  color: #06365f;
+  padding: 20px 20px 0px;
+}
+
+p{
+  padding: 0px 20px;
+}
+
+.pos-relative{
+  position: relative;
+  float: left;
+  left: 300px;
+  top: -200px;
+}
+
+.clearfix{
+  clear: both;
+}
+
+a{
+  text-decoration: none;
+  border: 1px #021647;
+  color: #abd0f0;
+  background-color: #3d78aa;
+  padding: 10px;
+  margin-left: 80px;
+  font-weight: bold;
+  font-size: 15px;
+  border-radius: 3px;
+}
+
+.phones{
+  margin: 0px 20px;
+}
+
+.download-button{
+  margin: 20px 0px 0px 20px;
+}
+
+.middle{
+  vertical-align: middle;
+}
+
+.container{
+  position: relative;
+  height: 350px;
+}
+
+footer{
+  position: absolute;
+  top: 650px;
+  left: 400px;
+  vertical-align: middle;
+}
+
+a>img{
+  margin-right: 5px;
+}
