--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,100 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+h2{
+  color: #06365f;
+  margin: 20px;
+  font-family: "Open Sans";
+}
+
+p {
+  font-family: "Open Sans";
+  margin : 20px;
+}
+
+.darkBlueBox {
+  background-color: #1c5380;
+  height: 300px;
+  position: relative;
+}
+
+.whiteBox {
+  background-color: #fff;
+  height: 500px;
+}
+
+.phone-div {
+  position: absolute;
+  height: 500px;
+  top: 100px;
+  left: 70px;
+  margin-left: 220px;
+
+}
+
+.content-div {
+  position: absolute;
+  top: 100px;
+  right: 10px;
+  width: 500px;
+  height: 500px;
+  margin-right: 220px
+}
+
+.title-div {
+  margin-top: 20px;
+}
+
+.text-div {
+  background-image: url("../images/frame.png");
+  background-size :cover;
+  padding-top: 20px;
+  margin-top: 40px;
+}
+
+.home-button {
+  background-color: #06365f;
+  width: 100px;
+  font-family: "Open Sans";
+  font-weight: bold;
+  color: #fff;
+  border-radius: 5px;
+  border: 1px;
+  position: absolute;
+  right: 1px;
+  position: absolute;
+  padding-left: 15px;
+}
+
+.align-with-text {
+  position: relative;
+  float: left;
+  margin-top: 15px;
+}
+
+.store-buttons {
+  margin-left: 20px;
+}
+
+.under-list{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  bottom: 150px;
+  left: 450px;
+}
+
+li {
+  float: left;
+  font-family: "Open Sans";
+  color: #06365f;
+  font-weight: bold;
+  margin: 5px;
+}
+
+.copyright {
+  color: grey;
+  font-weight: normal;
+}
