--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,104 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.blue {
+  background-color: #437197;
+  height: 300px;
+}
+
+.white {
+  width: 76%;
+  height: 505px;
+  margin: 0 auto;
+  position: relative;
+  top: -150px;
+}
+
+.section {
+  height: 300px;
+  position: absolute;
+}
+
+.phones {
+  width: 50%;
+  padding-left: 40px;
+}
+
+.content {
+  width: 56%;
+  margin-left: 40%;
+  position: absolute;
+}
+
+.btn {
+  color: white;
+  text-align: center;
+  float: right;
+  margin-top: 12px;
+  margin-right: 5px;
+  border: 1px solid #2E5E86;
+  border-radius: 5px;
+  padding: 8px 5px 8px 0px;
+  background-color: #4A7AA1;
+  width: 90px;
+  font-size: 14px;  
+}
+
+.moments {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.moments h2 {
+  color: #00224F;
+  padding-top: 30px;
+  margin-left: 40px;
+  font-size: 1.6em;
+}
+
+.moments p {
+  margin: 0 35px 10px 35px;
+  font-size: 1.1em;
+}
+
+section.downloads {
+  width: 70%;
+  margin: 0 auto;
+}
+
+section.downloads img {
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+footer {
+  position: relative;
+  top: -100px;
+  font-size: 12px;
+}
+
+footer li {
+  list-style: none;
+  float: left;
+  margin-left: 20px;
+}
+
+footer li>a {
+  color: #3A6990;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+div footer {
+  width: 50%;
+  margin: 0 auto;
+}
+
+li.copyright {
+  color: #C6C6C6;
+  font-weight: bold;
 }
