--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,8 @@
 /*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+Colors:
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
+Text: 1A1A1A
+Green: #00B172
+White: #FFF
+
+*/
