--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -14,27 +14,35 @@ html {
 }
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
   margin: 0;
-  background-position: top left;
   background-image: url("../images/bgtile.png");
+  background-position: top left;
   background-repeat: repeat-x;
 
 }
 
 h1 {
-  color: #06365f;
-  width: 45%;
-  margin: 0 10px;
-
+  color: #1c5380;
+  width: 60%;
+  margin: 20px 10px;
+  font-size: 26px;
 }
+
 p {
   margin-top: 10px;
   margin-left: 10px;
+  color: #333;
+  line-height: 24px;
 }
+
 .container {
-  margin: 50px auto;
-  max-width: 80%;
+  margin: 0 auto;
+  margin-top: 50px;
+  padding-top: 40px;
+  max-width: 68%;
   display: flex;
   justify-content: space-between;
 }
@@ -43,7 +51,8 @@ p {
   max-width: 30%;
 }
 .content {
-  max-width: 65%;
+  max-width: 504px;
+  padding-top: 15px;
 
   /*border: 1px solid black;*/
 }
@@ -52,9 +61,10 @@ p {
   background-image: url("/Users/Jennie/Ironhack/code/labs/lab-css-instagram-clone/starter-code/images/frame.png");
   background-repeat: no-repeat;
   background-position: top left;
-  background-size: cover;
+  background-size: 100%;
   padding: 5%;
   margin-bottom: 20px;
+  margin-top: 16px;
 }
 
 .inner-heading {
@@ -65,15 +75,14 @@ p {
 }
 
 .login {
-  background: linear-gradient(#96c3e8, #1c5380);
-  border: 2px solid #1c5380;
+  background: linear-gradient(#7295b0, #4a7597);
+  border: 2px solid #325d82;
   width: 100px;
   height: 40px;
   border-radius: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 0.8;
 }
 
 .login span {
@@ -81,13 +90,17 @@ p {
   font-size: 14px;
   padding-left: 10px;
   opacity: 0.9;
-  text-shadow: 0 1px #06365f;
+  text-shadow: 0 2px #06365f;
 }
 
 .stores {
   display: block;
-  margin-top: 30px;
+  margin-top: 24px;
   vertical-align: baseline;
+}
+
+.stores img: ;:first-child {
+  margin-right: 15px;
 }
 
 .footer-nav {
@@ -102,16 +115,27 @@ p {
 }
 
 .footer-nav li {
-  color: #1c5380;
   display: inline;
-  text-transform: uppercase;
   margin: 0 10px;
+}
+
+.footer-nav li a {
+  text-decoration: none;
+  color: #1c5380;
   font-size: 12px;
   font-weight: bold;
+  text-transform: uppercase;
   opacity: 0.7;
+  transition: opacity 200ms;
+}
+
+.footer-nav li a:hover {
+  opacity: 1;
 }
 
 .footer-nav li:last-child {
   color: grey;
-
+  font-size: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
