--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,116 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  	font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  	margin: 0;
+}
+
+.blueHeader {
+	clear: none;
+	margin: 0;
+	width: 100%;
+	height: 230px;
+	background-color: #06365f;
+	position: absolute;
+
+}
+
+.tittleInstagram {
+	position: absolute;
+	padding-left: 545px;
+	padding-top: 80px;
+	width: 300px;
+}
+
+
+.loginButton {
+	display: block;
+ 	float: right;
+  	font-size: 20px;
+  	background-color: #1c5380;
+  	color: white;
+  	position: absolute;
+  	top: 85px;
+  	right: 210px;
+  	font-weight: bold;
+  	padding: 10px 20px;
+  	border: 1px solid silver;
+  	border-radius: 4px;
+}
+
+.loginButton:hover {
+	background-color: red;
+    color: green;
+}
+
+.loginInHome img {
+  	width: 30px;
+  	vertical-align: middle;
+  	padding-right: 15px;
+}
+
+
+.phonesImage {
+	padding-left: 110px;
+	padding-top: 55px;
+	position: absolute;
+}
+
+.backgroundImage {
+	position: absolute;
+	width: 630px;
+	padding-top: 165px;
+	padding-left: 540px;
+}
+
+.mainTextImage h1 {
+	color: #06365f;
+	font-style: bold;
+	position: absolute;
+	left: 590px;
+	top: 190px;
+}
+
+.textCentralInstagram {
+	width: 550px;
+	font-size: 18px;
+	left: 590px;
+	position: absolute;
+	top: 290px;
+}
+
+.badgesImage {
+	position: absolute;
+	left: 590px;
+	bottom: 70px;
+}
+
+.badgesImage img {
+	width: 200px;
+	height: 60px;
+	padding-right: 40px;
+}
+
+footer ul {
+	position: relative;
+	padding-left: 250px;
+	padding-top: 10px;
+}
+
+
+ul li {
+  	margin-left: 10px;
+  	position: relative;
+  	display: inline;
+  	list-style-type: none;
+  	color: #1c5380;
+  	font-size: 18px;
+  	font-weight: bold;
+  	top: 570px;
+}
+
+
+li:last-child {
+	color: silver;
+    padding-left: 20px;
 }
