--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,153 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.bg-dark {
+  height: 300px;
+  width: 100%;
+  /* For browsers that do not support gradients */
+  background: #51789B;
+  /* For Safari 5.1 to 6.0 */
+  background: -webkit-linear-gradient(#1c5380, #06365f);
+  /* For Opera 11.1 to 12.0 */
+  background: -o-linear-gradient(#1c5380, #06365f);
+  /* For Firefox 3.6 to 15 */
+  background: -moz-linear-gradient(#1c5380, #06365f);
+  /* Standard syntax */
+  background: linear-gradient(#1c5380, #06365f);
+}
+
+.bg-light {
+  background: #F5F6F8;
+  height: 500px;
+  width: 100%;
+}
+
+.container {
+  /*border: 4px solid red;*/
+  position: absolute;
+  height: 530px;
+  width: 70%;
+  top: 20%;
+  left: 15%;
+}
+
+.col {
+  float: left;
+}
+
+.clearfix {
+  clear: both;
+}
+
+.phone {
+  text-align: right;
+  width: 40%;
+  /*  border: 3px dashed black;*/
+  margin-right: 5%;
+}
+
+.phone img {
+  height: 530px;
+}
+
+.content {
+  width: 42%;
+  /*  border: 3px dashed green;*/
+  padding-top: 20px;
+  height: 530px;
+}
+
+header {
+  height: 80px;
+}
+
+header>img {}
+
+.login {
+  float: right;
+  padding: 10px;
+  /*  border: 1px solid #06365f;*/
+}
+
+.login button {
+  background: #1c5380;
+  font-size: 16px;
+  padding: 10px;
+  border-radius: 5%;
+  border-color: #06365f;
+  border-style: solid;
+}
+
+.login img {
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+.login span {
+  color: white;
+  vertical-align: middle;
+}
+
+section {
+  background: url(../images/frame.png);
+  background-size: cover;
+  height: 375px;
+  overflow: hidden;
+}
+
+h2 {
+  width: 265px;
+  color: #06365f;
+  font-size: 1.6em;
+  padding: 20px 0px 0px 50px;
+}
+
+p {
+  margin: 10px 50px;
+}
+
+.buttons-down {
+  height: 100px;
+}
+
+.buttons-down img {
+  margin-left: 40px;
+}
+
+footer {
+  clear: both;
+  background: #F5F6F8;
+  text-align: center;
+  height: 50px;
+  width: 100%;
+  margin: 0 auto 40px;
+  font-weight: bold;
+  text-transform: uppercase;
+  /* border: 4px dashed blue;*/
+  font-size: 14px;
+}
+
+nav {
+  color: #51789B;
+  font-weight: 700;
+  display: inline;
+}
+
+ul, li {
+  display: inline;
+  list-style: none;
+}
+
+li {
+  margin-right: 8px;
+}
+
+.copyright {
+  color: grey;
+  display: inline-block;
 }
