--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,24 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#header {
+  background-color: #1c5380;
+}
+
+.phone-img {
+  float: left;
+  width: 42%;
+}
+
+.phone-img img {
+  float: right;
+}
+.pitch {
+  float: right;
+  width: 52%;
+}
+
+footer {
+  clear: both;
+}
