--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,85 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+#main {
+  display: flex;
+}
+
+#left {
+  margin-left: 10%;
+  margin-top: 5%;
+}
+
+#right {
+  margin-top: 5%;
+  margin-left: 5%;
+  padding: 40px 40px 0 40px;
+  width: 47%;
+}
+
+#top-right {
+  display: flex;
+}
+
+#button {
+  display: flex;
+  margin-left:30%;
+  border: 1px solid #1c5380;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  padding: 2px;
+  height: 35px;
+  width: 90px;
+  align-items: stretch;
+  background-color: #1c5380;
+  border-radius: 6px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  background: linear-gradient( #6892b2, #1c5380);
+}
+
+#button img {
+  height: 25px;
+  padding-left: 5px;
+  padding-top: 5px;
+}
+
+#button p {
+  font-size: 12px;
+  margin-left: 10px;
+  color: white;
+  font-weight: bold;
+}
+
+#content {
+  background-image: url(../images/frame.png);
+  padding: 50px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+h1 {
+  margin-top: -10px;
+  color: #06365f;
+}
+
+span {
+  color: grey;
+}
+
+#footer ul {
+  display: flex;
+  margin: 50px auto 0 20%;
+}
+
+#footer li {
+  color: #6892b2;
+  text-transform: uppercase;
+  list-style-type: none;
+  padding: 10px;
+  font-weight: bold;
+  font-size: 13px;
 }
