--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,45 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+html {
+  height:100%;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  /*background: url("/home/valentin/code/lab/lab-css-instagram-clone/starter-code/images/bgtile.png") 1px 0  repeat;*/
+}
+
+  .iphone-position {
+    float: left;
+    margin-left: 100px;
+    margin-top: 100px;
+  }
+
+  .position-title {
+    position: absolute;
+    top: 100px;
+    left: 450px;
+  }
+
+  .container-content {
+    border: 1px solid black;
+    border-radius: 5px;
+    width: 35%;
+    padding: 10px;
+    text-align: center;
+    position: absolute;
+    top: 200px;
+    left: 475px;
+  }
+
+  .footer-bottom {
+    flex-shrink: 0;
+  }
+
+li {
+  display:inline;
 }
