--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,9 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  }
+
+.layout0{
+  display: flex;
+  justify-content: center;
 }
